finish storing unchanging demanding values in cache

--- a/pennylane_snowflurry/jupyter/noob.ipynb
+++ b/pennylane_snowflurry/jupyter/noob.ipynb
@@ -18,11 +18,7 @@
     "from pennylane import numpy as np\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "import csv\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from collections import defaultdict\n",
-    "from datetime import datetime\n",
     "\n",
     "\n",
     "from pennylane_snowflurry.API.client import MonarqClient\n",
@@ -33,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +89,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimized params: [5.0175]\n",
-      "Optimized params: [4.86207854]\n"
+      "0. Optimized params: [4.9475] (45.173918s) (45.174479s)\n",
+      "1. Optimized params: [4.97697648] (45.009639s) (90.184118s)\n",
+      "2. Optimized params: [4.84863554] (46.6994s) (136.883518s)\n",
+      "3. Optimized params: [4.7079784] (43.439074s) (180.322592s)\n"
      ]
     }
    ],
    "source": [
+    "from datetime import datetime\n",
+    "\n",
     "def cost(params): \n",
     "    counts = circuit(params)\n",
     "    return compute_expval(counts)\n",
@@ -110,14 +110,15 @@
     "saved_params = []\n",
     "saved_costs = []\n",
     "\n",
-    "\n",
+    "start = datetime.now()\n",
     "for i in range(steps):\n",
+    "    op = datetime.now()\n",
     "    params = opt.step(cost, params)\n",
     "    current_cost = cost(params)\n",
     "    saved_params.append(params.copy())  \n",
     "    saved_costs.append(current_cost)\n",
     "  \n",
-    "    print(f'Optimized params: {params}') # cos(pi) = -1 !\n",
+    "    print(f'{i}. Optimized params: {params} ({(datetime.now() - op).total_seconds()}s) ({(datetime.now() - start).total_seconds()}s)') # cos(pi) = -1 !\n",
     "\n"
    ]
   },
