update docstring and user doc, placement and routing prioritized on fidelities

--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,14 @@
      "output_type": "stream",
      "text": [
       "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
+      "  warn(\n"
      ]
     }
    ],
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,15 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: ──H─╭●─┤  Counts\n",
-      "1: ────╰X─┤  Counts\n"
+      "0: ──H─╭●────┤  Counts\n",
+      "1: ────╰X─╭●─┤  Counts\n",
+      "2: ───────╰X─┤  Counts\n"
      ]
     }
    ],
@@ -161,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'000': 370, '001': 28, '010': 81, '011': 67, '100': 65, '101': 29, '110': 85, '111': 275}\n"
+      "{'000': 389, '001': 35, '010': 38, '011': 67, '100': 92, '101': 66, '110': 86, '111': 227}\n"
      ]
     }
    ],
