--- a/doc/using_client.ipynb
+++ b/doc/using_client.ipynb
@@ -39,6 +39,14 @@
      "text": [
       "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
+      "  warn(\n"
+     ]
     }
    ],
    "source": [
@@ -55,10 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# change the information in the client for your credentials\n",
     "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\") "
    ]
   },
@@ -75,6 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this will create a device that lets you communicate with MonarQ using your credentials\n",
     "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)"
    ]
   }
