--- a/doc/using_configurations.ipynb
+++ b/doc/using_configurations.ipynb
@@ -9,13 +9,11 @@
     "The default behaviour of MonarqDevice's transpiler goes as such :\n",
     "\n",
     "1. Decompose measures if they are not in the computational basis\n",
-    "2. Decompose 3+ qubits gates and non-standard gates to a subset that is easier to optimize (clifford-t gates)\n",
+    "2. Decompose 3+ qubits gates and non-standard gates to a subset that is easier to optimize (clifford+t gates)\n",
     "2. Map the circuit's wires to the machines qubits by using the circuit's and machine's connectivity graphs\n",
     "3. If any 2+ qubit gates are not connected in given mapping, connect them using swaps\n",
     "4. Optimize the circuit (commute gates, merge rotations, remove inverses and trivial gates)\n",
-    "5. Decompose non-native gates to native ones\n",
-    "\n",
-    "The transpiler uses benchmarks of the machine's accuracy in the placement and routing part."
+    "5. Decompose non-native gates to native ones"
    ]
   },
   {
@@ -27,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,12 +34,21 @@
      "text": [
       "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
+      "  warn(\n"
+     ]
     }
    ],
    "source": [
     "from pennylane_snowflurry.API.client import MonarqClient\n",
     "import pennylane as qml\n",
     "\n",
+    "# change the information in the client for your credentials\n",
     "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
     "\n",
     "# no config passed in arguments = config = MonarqDefaultConfig\n",
@@ -66,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pennylane_snowflurry.processing.config import MonarqDefaultConfig, ProcessingConfig\n",
-    "from pennylane_snowflurry.processing.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition"
+    "from pennylane_snowflurry.processing.steps import CliffordTDecomposition, ASTAR, Swaps, IterativeCommuteAndMerge, MonarqDecomposition, DecomposeReadout"
    ]
   },
   {
@@ -83,10 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "decomp_readout = DecomposeReadout()\n",
     "base_decomp = CliffordTDecomposition()\n",
     "placement = ASTAR()\n",
     "routing = Swaps()\n",
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,10 +119,10 @@
     "default_config = MonarqDefaultConfig()\n",
     "\n",
     "# This is an equivalent config, built up by hand using the TranspilerConfig base class\n",
-    "default_config = ProcessingConfig(base_decomp, placement, routing, optimization, native_decomp)\n",
+    "default_config = ProcessingConfig(decomp_readout, base_decomp, placement, routing, optimization, native_decomp)\n",
     "\n",
     "# Say you are confident that your circuit is well placed and routed, you can skip those steps by creating a custom config, and not using placement / routing steps\n",
-    "custom_config = ProcessingConfig(base_decomp, optimization, native_decomp)"
+    "custom_config = ProcessingConfig(decomp_readout, base_decomp, optimization, native_decomp)"
    ]
   },
   {
@@ -130,7 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_client = MonarqClient(\"your_host_here\", \"your_user_here\", \"your_access_token_here\", \"your_project_name_here\") \n",
+    "# change the information in the client for your credentials\n",
+    "my_client = MonarqClient(\"your_host\", \"your_user\", \"your_access_token\", \"your_project_name\") \n",
     "\n",
     "dev = qml.device(\"monarq.default\", client=my_client, processing_config=custom_config)"
    ]
@@ -144,42 +153,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pennylane_snowflurry.processing.config import MonarqDefaultConfig, MonarqDefaultConfigNoBenchmark, NoPlaceNoRouteConfig, EmptyConfig\n",
     "\n",
     "# this is the preset that is used by default when you dont set a config manually\n",
-    "my_config = MonarqDefaultConfig()\n",
+    "default = MonarqDefaultConfig()\n",
     "\n",
     "# this preset does the same thing as the default one, without the benchmarking acceptance tests in the placement and routing step\n",
-    "my_config = MonarqDefaultConfigNoBenchmark()\n",
+    "no_benchmark = MonarqDefaultConfigNoBenchmark()\n",
     "\n",
     "# this preset skips the placement and routing part. Could be useful if you want to choose machine qubits and couplers manually\n",
-    "my_config = NoPlaceNoRouteConfig()\n",
+    "no_place_no_route = NoPlaceNoRouteConfig()\n",
     "\n",
     "# this preset does nothing. It can be used if your circuit is manually transpiled. \n",
     "# Make sure your wires respect MonarQ's topology and that your gates are native to MonarQ.\n",
-    "my_config = EmptyConfig()"
+    "empty = EmptyConfig()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PS. You can set the placement and routing steps not to use benchmarking if you want to. \n",
+    "### Benchmarks\n",
+    "\n",
+    "The transpiler uses benchmarks in the placement and routing part.\n",
+    "Specifically, the state 1 readout fidelity and the cz gate fidelity are used to measure the qubit and coupler accuracy respectively.\n",
+    "Those values are used to determine if qubits are working, but also to choose the best qubits and couplers for your circuits."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can set the placement and routing steps not to use benchmarking if you want to. \n",
     "\n",
     "To do so, just set ```use_benchmark``` to ```False``` in the MonarqDefaultConfig's constructor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_config = MonarqDefaultConfig(False)"
+    "my_config = MonarqDefaultConfig(False)\n",
+    "\n",
+    "# the former is the same as the following preset :\n",
+    "my_config = MonarqDefaultConfigNoBenchmark()"
    ]
   },
   {
@@ -191,21 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "placement_no_benchmark = ASTAR(use_benchmark = False)\n",
     "routing_no_benchmark = Swaps(use_benchmark = False)\n",
     "\n",
-    "config_no_benchmark = ProcessingConfig(base_decomp, placement_no_benchmark, routing_no_benchmark, optimization, native_decomp)"
+    "# you can then create a custom configuration with your custom steps\n",
+    "config_no_benchmark = ProcessingConfig(decomp_readout, base_decomp, placement_no_benchmark, routing_no_benchmark, optimization, native_decomp)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though there may be scenarios where it is beneficial to bypass the transpiling capabilites of the plugin, it is strongly recommended to stick to the default configuration. You don't have to pass any configuration to the device to use the default preset."
+    "Even though there may be scenarios where it is beneficial to bypass the transpiling capabilites of the plugin, it is strongly recommended to stick to the default configuration. \n",
+    "\n",
+    "You don't have to pass any configuration to the device to use the default preset."
    ]
   },
   {
@@ -214,9 +240,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# change the information in the client for your credentials\n",
     "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
     "\n",
-    "dev = qml.device(\"monarq.default\", shots=1000, client = client)"
+    "dev = qml.device(\"monarq.default\", shots=1000, client = client)\n",
+    "\n",
+    "# the former is the same as doing the latter\n",
+    "\n",
+    "# change the information in the client for your credentials\n",
+    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
+    "\n",
+    "my_config = MonarqDefaultConfig()\n",
+    "\n",
+    "dev = qml.device(\"monarq.default\", shots=1000, client = client, processing_config=my_config)"
    ]
   }
  ],
