--- a/doc/using_custom_gates.ipynb
+++ b/doc/using_custom_gates.ipynb
@@ -199,11 +199,13 @@
     "from pennylane_snowflurry.processing.config import EmptyConfig\n",
     "from pennylane_snowflurry.API.client import MonarqClient\n",
     "\n",
+    "# change the information in the client for your credentials\n",
     "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
     "\n",
     "# say you want to transpile your circuit by yourself\n",
     "config = EmptyConfig() \n",
     "\n",
+    "# create a device that uses the empty configuration\n",
     "dev = qml.device(\"monarq.default\", shots=1000, client = client, processing_config = config)\n",
     "\n",
     "# This would be equivalent to a bell state (Hadamard(0), CNOT([0, 1]))\n",
@@ -212,24 +214,31 @@
     "# We also find that CNOT([i, j]) is equivalent to H(j) - CZ([i, j]) - H(j)\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
+    "    \n",
     "    # native decomposition of a hadamard gate\n",
+    "    \n",
     "    custom.Z90(0)\n",
     "    custom.X90(0)\n",
     "    custom.Z90(0)\n",
     "    \n",
     "    # native decomposition of a CNOT gate\n",
+    "    \n",
+    "    # Hadamard\n",
     "    custom.Z90(4)\n",
     "    custom.X90(4)\n",
     "    custom.Z90(4)\n",
     "    \n",
     "    qml.CZ([0, 4])\n",
     "    \n",
+    "    # Hadamard\n",
     "    custom.Z90(4)\n",
     "    custom.X90(4)\n",
     "    custom.Z90(4)\n",
     "    \n",
-    "    return qml.coutns(wires=[0, 4])\n",
+    "    # apply readouts on qubits 0 and 4\n",
+    "    return qml.counts(wires=[0, 4])\n",
     "\n",
+    "# results should be the same as a bell state\n",
     "results = circuit()\n",
     "print(circuit)"
    ]
@@ -247,6 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# change the information in the client for your credentials\n",
     "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\")\n",
     "\n",
     "dev = qml.device(\"monarq.default\", shots=1000, client = client)"
