--- a/pennylane_snowflurry/jupyter/qiskit_vs_monarq_device.ipynb
+++ b/pennylane_snowflurry/jupyter/qiskit_vs_monarq_device.ipynb
@@ -19,10 +19,10 @@
     "from functools import partial\n",
     "import pennylane as qml\n",
     "from pennylane.tape import QuantumTape\n",
-    "from pennylane_snowflurry.transpiler.monarq_transpile import Transpiler\n",
-    "from pennylane_snowflurry.transpiler.transpiler_config import MonarqDefaultConfig\n",
-    "from pennylane_snowflurry.utility.debug_utility import arbitrary_circuit, to_qasm\n",
-    "from pennylane_snowflurry.transpiler.steps.placement import VF2\n",
+    "from pennylane_snowflurry.processing import PreProcessor\n",
+    "from pennylane_snowflurry.processing.config import MonarqDefaultConfig\n",
+    "from pennylane_snowflurry.utility.debug import arbitrary_circuit, to_qasm\n",
+    "from pennylane_snowflurry.processing.steps import VF2\n",
     "\n",
     "\n",
     "from pennylane_snowflurry.monarq_data import connectivity"
@@ -30,14 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "class FakeMonarQ(BackendV2):\n",
-    "    \"\"\"Fake multi chip backend.\"\"\"\n",
-    " \n",
     "    def __init__(self):\n",
     "        \n",
     "        super().__init__(name=\"Fake MonarQ\")\n",
@@ -87,7 +85,7 @@
     "        self._target.add_instruction(Delay(Parameter(\"t\")), delay_props)\n",
     "        # Add chip local 2q gate which is CZ\n",
     "        cz_props = {}\n",
-    "        for v in [[0, 1], [0, 2], [0, 3], [1, 2], [1, 3], [2, 3]]:# connectivity[\"couplers\"].values():\n",
+    "        for v in connectivity[\"couplers\"].values():\n",
     "            edge = (v[0], v[1])\n",
     "            cz_props[edge] = InstructionProperties(\n",
     "                    error=rng.uniform(7e-4, 5e-3),\n",
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +125,7 @@
      "output_type": "stream",
      "text": [
       "Post-Transpilation: \n",
-      "OrderedDict({'sx': 28, 'p': 17, 'cz': 14, 's': 2})\n"
+      "OrderedDict({'sdg': 10, 'sxdg': 5, 'sx': 2, 'cz': 2})\n"
      ]
     }
    ],
@@ -137,10 +135,21 @@
     "backend = FakeMonarQ()\n",
     "\n",
     "ghz = QuantumCircuit(4)\n",
-    "ghz.mcx([0, 1, 2], 3)\n",
+    "ghz.h(0)\n",
+    "ghz.h(1)\n",
+    "ghz.h(2)\n",
+    "ghz.h(3)\n",
+    "ghz.z(3)\n",
+    "ghz.cx(0, 3)\n",
+    "ghz.cx(2, 3)\n",
+    "ghz.h(0)\n",
+    "ghz.h(1)\n",
+    "ghz.h(2)\n",
+    "\n",
     "op_counts = ghz.count_ops()\n",
     "pm = generate_preset_pass_manager(optimization_level=3, backend=backend)\n",
     "transpiled_ghz = pm.run(ghz)\n",
+    "ops = [op for op in transpiled_ghz.data]\n",
     "op_counts = transpiled_ghz.count_ops()\n",
     "\n",
     "print(\"Post-Transpilation: \")\n",
@@ -152,26 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'int'>, {'Z90': 40, 'X90': 63, 'PhaseShift': 24, 'PauliZ': 36, 'CZ': 24})\n"
+      "defaultdict(<class 'int'>, {'X90': 5, 'PauliX': 1, 'PauliZ': 2, 'ZM90': 1, 'CZ': 2})\n"
      ]
     }
    ],
    "source": [
     "default_dev = qml.device(\"default.qubit\")\n",
     "\n",
-    "tape = QuantumTape(ops=[qml.MultiControlledX([0, 1, 2], 3)], measurements=[qml.probs(wires=[0, 1, 2, 3])])\n",
+    "tape = QuantumTape(ops=[qml.Hadamard(0), qml.Hadamard(1), qml.Hadamard(2), qml.Hadamard(3), qml.Z(3), qml.CNOT([0, 3]), qml.CNOT([2, 3]), qml.Hadamard(0), qml.Hadamard(1), qml.Hadamard(2)], measurements=[qml.probs(wires=[0, 1, 2])])\n",
     "\n",
     "config = MonarqDefaultConfig(False)\n",
-    "config.steps.pop(1)\n",
-    "config.steps.pop(1)\n",
-    "tape = Transpiler.get_transpiler(config)(tape)[0][0]\n",
+    "tape = PreProcessor.get_processor(config, [0, 1, 2, 3])(tape)[0][0]\n",
     "\n",
     "node = qml.QNode(lambda : arbitrary_circuit(tape, qml.probs), default_dev)\n",
     "node()\n",
