make sure documentation works

--- a/doc/using_client.ipynb
+++ b/doc/using_client.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# change the information in the client for your credentials\n",
-    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\") "
+    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project name\") \n"
    ]
   },
   {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
