--- a/doc/using_custom_gates.ipynb
+++ b/doc/using_custom_gates.ipynb
@@ -13,9 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
+      "  warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# this section is for initializing the document's code\n",
     "\n",
@@ -44,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,47 +70,245 @@
       "PauliX : \n",
       "[[0 1]\n",
       " [1 0]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a pi rad rotation around the X axis (has the effect of an amplitude flip)\n",
+    "x = qml.PauliX(0) \n",
+    "print_matrix(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "PauliZ : \n",
       "[[ 1  0]\n",
       " [ 0 -1]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a pi rad rotation around the Z axis (has the effect of a phase flip)\n",
+    "z = qml.PauliZ(0)\n",
+    "print_matrix(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "PauliY : \n",
       "[[ 0.+0.j -0.-1.j]\n",
       " [ 0.+1.j  0.+0.j]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a pi rad rotation around the Y axis (has the effect of combining a X and a Z)\n",
+    "y = qml.PauliY(0) \n",
+    "print_matrix(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Z90 : \n",
       "[[0.70710678-0.70710678j 0.        +0.j        ]\n",
       " [0.        +0.j         0.70710678+0.70710678j]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a pi/2 rad rotation around the Z axis\n",
+    "z90 = custom.Z90(0)\n",
+    "print_matrix(z90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ZM90 : \n",
       "[[0.70710678+0.70710678j 0.        +0.j        ]\n",
       " [0.        +0.j         0.70710678-0.70710678j]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a -pi/2 rad rotation around the Z axis\n",
+    "zm90 = custom.ZM90(0)\n",
+    "print_matrix(zm90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Z90 : \n",
       "[[0.70710678-0.70710678j 0.        +0.j        ]\n",
       " [0.        +0.j         0.70710678+0.70710678j]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a pi/2 rad rotation around the X axis\n",
+    "x90 = custom.X90(0)\n",
+    "print_matrix(z90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ZM90 : \n",
       "[[0.70710678+0.70710678j 0.        +0.j        ]\n",
       " [0.        +0.j         0.70710678-0.70710678j]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a -pi/2 rad rotation around the X axis\n",
+    "xm90 = custom.XM90(0)\n",
+    "print_matrix(zm90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Y90 : \n",
       "[[ 0.70710678+0.j -0.70710678-0.j]\n",
       " [ 0.70710678+0.j  0.70710678+0.j]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a pi/2 rad rotation around the Y axis\n",
+    "y90 = custom.Y90(0)\n",
+    "print_matrix(y90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "YM90 : \n",
       "[[ 0.70710678+0.j  0.70710678-0.j]\n",
       " [-0.70710678+0.j  0.70710678+0.j]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a -pi/2 rad rotation around the Y axis\n",
+    "ym90 = custom.YM90(0)\n",
+    "print_matrix(ym90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "T : \n",
       "[[1.        +0.j         0.        +0.j        ]\n",
       " [0.        +0.j         0.70710678+0.70710678j]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a pi/4 rad rotation around the Z axis\n",
+    "t = qml.T(0)\n",
+    "print_matrix(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "TDagger : \n",
       "[[1.        +0.j         0.        +0.j        ]\n",
       " [0.        +0.j         0.70710678-0.70710678j]]\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a -pi/4 rad rotation around the Z axis\n",
+    "tdag = custom.TDagger(0)\n",
+    "print_matrix(tdag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "PhaseShift : \n",
       "[[ 1. +0.j         0. +0.j       ]\n",
       " [ 0. +0.j        -0.5+0.8660254j]]\n",
@@ -103,50 +317,6 @@
     }
    ],
    "source": [
-    "# a pi rad rotation around the X axis (has the effect of an amplitude flip)\n",
-    "x = qml.PauliX(0) \n",
-    "print_matrix(x)\n",
-    "\n",
-    "# a pi rad rotation around the Z axis (has the effect of a phase flip)\n",
-    "z = qml.PauliZ(0)\n",
-    "print_matrix(z)\n",
-    "\n",
-    "# a pi rad rotation around the Y axis (has the effect of combining a X and a Z)\n",
-    "y = qml.PauliY(0) \n",
-    "print_matrix(y)\n",
-    "\n",
-    "# a pi/2 rad rotation around the Z axis\n",
-    "z90 = custom.Z90(0)\n",
-    "print_matrix(z90)\n",
-    "\n",
-    "# a -pi/2 rad rotation around the Z axis\n",
-    "zm90 = custom.ZM90(0)\n",
-    "print_matrix(zm90)\n",
-    "\n",
-    "# a pi/2 rad rotation around the X axis\n",
-    "x90 = custom.X90(0)\n",
-    "print_matrix(z90)\n",
-    "\n",
-    "# a -pi/2 rad rotation around the X axis\n",
-    "xm90 = custom.XM90(0)\n",
-    "print_matrix(zm90)\n",
-    "\n",
-    "# a pi/2 rad rotation around the Y axis\n",
-    "y90 = custom.Y90(0)\n",
-    "print_matrix(y90)\n",
-    "\n",
-    "# a -pi/2 rad rotation around the Y axis\n",
-    "ym90 = custom.YM90(0)\n",
-    "print_matrix(ym90)\n",
-    "\n",
-    "# a pi/4 rad rotation around the Z axis\n",
-    "t = qml.T(0)\n",
-    "print_matrix(t)\n",
-    "\n",
-    "# a -pi/4 rad rotation around the Z axis\n",
-    "tdag = custom.TDagger(0)\n",
-    "print_matrix(tdag)\n",
-    "\n",
     "# an arbitrary rotation around the Z axis\n",
     "p = qml.PhaseShift(2*np.pi/3, 0)\n",
     "print_matrix(p)"
@@ -192,9 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'00': 452, '01': 155, '10': 92, '11': 301}\n"
+     ]
+    }
+   ],
    "source": [
     "from pennylane_snowflurry.processing.config import EmptyConfig\n",
     "from pennylane_snowflurry.API.client import MonarqClient\n",
@@ -240,7 +418,7 @@
     "\n",
     "# results should be the same as a bell state\n",
     "results = circuit()\n",
-    "print(circuit)"
+    "print(results)"
    ]
   },
   {
@@ -252,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
