--- a/doc/using_transpiler.ipynb
+++ b/doc/using_transpiler.ipynb
@@ -20,6 +20,14 @@
      "text": [
       "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bouch\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pennylane\\__init__.py:200: PennyLaneDeprecationWarning: Device will no longer be accessible top level. Please access the class as pennylane.devices.LegacyDevice\n",
+      "  warn(\n"
+     ]
     }
    ],
    "source": [
@@ -31,19 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'000': 373, '001': 39, '010': 81, '011': 63, '100': 64, '101': 34, '110': 96, '111': 250}\n"
+      "{'000': 379, '001': 43, '010': 48, '011': 53, '100': 123, '101': 63, '110': 95, '111': 196}\n"
      ]
     }
    ],
    "source": [
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\")\n",
+    "# change the information in the client for your credentials\n",
+    "client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
     "\n",
     "# no configuration argument => config is set to MonarqDefaultConfig\n",
     "dev = qml.device(\"monarq.default\", shots=1000, client=client) \n",
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +133,7 @@
        "[H(0), CNOT(wires=[0, 1])]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +161,7 @@
        "[X90(wires=[0]), X90(wires=[4]), Z(4), CZ(wires=[0, 4]), X90(wires=[4])]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
